Skip links: fix a regression where they are not visible when you focus them

--- a/app/assets/stylesheets/components/skip-links.scss
+++ b/app/assets/stylesheets/components/skip-links.scss
@@ -2,7 +2,6 @@
     height: 2rem;
 }
 #skip-link a {
-    @include visually-hidden;
     @include visually-hidden-focusable;
     position: sticky !important;
     margin: .2rem 0;
